# pintar

./: Cargo.toml  README.md
src/: default_elements.rs  default_ps.cso  default_vs.cso  lib.rs  line_ps.cso  line_vs.cso  mesh.rs  vertex_group.rs
src/primitives/: cube.rs  cylinder.rs  mod.rs  sphere.rs
src/shaders/: compile.bat  default.hlsl  default_ps.cso  default_vs.cso  fullscreen_quad.hlsl  fullscreen_quad_ps.cso  fullscreen_quad_vs.cso  line.hlsl  line_vs.cso
